# ETL_Pipeline_Banl_Info

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: exchange_rates.csv
src/largest_banks_etl/: cli.py  pipeline.py
test/: test_smoke.py
