[project]
name = "largest-banks-etl"
version = "0.1.0"
description = "ETL pipeline that extracts largest banks data from Wikipedia, transforms currencies, and loads to CSV + SQLite."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=4.9",
]

[project.scripts]
largest-banks-etl = "largest_banks_etl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
